cifs: fix check of tcon dfs in smb1 (bsc#1178270).

--- a/series.conf
+++ b/series.conf
@@ -55944,6 +55944,7 @@
 	patches.suse/usb-host-ohci-exynos-Fix-error-handling-in-exynos_oh.patch
 	patches.suse/USB-Ignore-UAS-for-JMicron-JMS567-ATA-ATAPI-Bridge.patch
 	patches.suse/usb-storage-Add-unusual_uas-entry-for-Sony-PSZ-drive.patch
+	patches.suse/cifs-fix-check-of-tcon-dfs-in-smb1.patch
 	patches.suse/mmc-sdhci-pci-fix-sdhci_reset_all-for-cqhci-for-intel-glk-based-controllers.patch
 	patches.suse/sdhci-tegra-Remove-SDHCI_QUIRK_DATA_TIMEOUT_USES_SDC2.patch
 	patches.suse/sdhci-tegra-Remove-SDHCI_QUIRK_DATA_TIMEOUT_USES_SDC.patch
