--- a/series.conf
+++ b/series.conf
@@ -56573,6 +56573,7 @@
 	patches.suse/rpadlpar_io-Add-MODULE_DESCRIPTION-entries-to-kernel.patch
 	patches.suse/0004-ocfs2-give-applications-more-IO-opportunities-during.patch
 	patches.suse/fs-select.c-batch-user-writes-in-do_sys_poll.patch
+	patches.suse/cifs-set_root_ses-ipc.patch
 
 	########################################################
 	# end of sorted patches
