--- a/series.conf
+++ b/series.conf
@@ -56131,6 +56131,7 @@
 	patches.suse/media-Revert-media-exynos4-is-Add-missed-check-for-p.patch
 	patches.suse/media-m5mols-Check-function-pointer-in-m5mols_sensor.patch
 	patches.suse/media-saa7134-avoid-a-shift-overflow.patch
+	patches.suse/media-uvcvideo-Set-media-controller-entity-functions.patch
 	patches.suse/media-uvcvideo-Ensure-all-probed-info-is-returned-to.patch
 	patches.suse/media-omap3isp-Fix-memleak-in-isp_probe.patch
 	patches.suse/media-tc358743-initialize-variable.patch
