--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1686,3 +1686,4 @@ bf2ce3fdf314cd181908b55a4d6c58817674a062 # net: ethernet: ti: cpsw: already appl
 5a04e8f81a4f55ce1c2b7b525744a187c99ba302 # net: ethernet: davinci_emac: already applied
 586b58cac8b4683eb58a1446fbc399de18974e40 # too intrusive, improbable, bsc#1174019
 2e7c8fb8942773f412fe12f3b63e8bb92c18ab3f # falsly attributed. Bug introduced in v5.2 by 997deb811bf55731a7c0bd972d8d0a266ef8d7e5
+6c8d0cdd6ccb21badd52a10d627f80cf1a6ab63f # cosmetic fix
