media: s5p-g2d: Fix a memory leak in an error handling path in 'g2d_probe()' (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55766,6 +55766,7 @@
 	patches.suse/media-firewire-Using-uninitialized-values-in-node_pr.patch
 	patches.suse/media-exynos4-is-Add-missed-check-for-pinctrl_lookup.patch
 	patches.suse/go7007-add-sanity-checking-for-endpoints.patch
+	patches.suse/media-s5p-g2d-Fix-a-memory-leak-in-an-error-handling.patch
 	patches.suse/media-vpss-clean-up-resources-in-init.patch
 	patches.suse/media-mtk-mdp-Fix-a-refcounting-bug-on-error-in-init.patch
 	patches.suse/media-davinci-vpif_capture-fix-potential-double-free.patch
