media: mtk-mdp: Fix a refcounting bug on error in init (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -55767,6 +55767,7 @@
 	patches.suse/media-exynos4-is-Add-missed-check-for-pinctrl_lookup.patch
 	patches.suse/go7007-add-sanity-checking-for-endpoints.patch
 	patches.suse/media-vpss-clean-up-resources-in-init.patch
+	patches.suse/media-mtk-mdp-Fix-a-refcounting-bug-on-error-in-init.patch
 	patches.suse/media-davinci-vpif_capture-fix-potential-double-free.patch
 	patches.suse/0018-dm-rq-don-t-call-blk_mq_queue_stopped-in-dm_stop_que.patch
 	patches.suse/ftrace-setup-correct-ftrace_fl_regs-flags-for-module.patch
