--- a/series.conf
+++ b/series.conf
@@ -56445,6 +56445,7 @@
 	patches.suse/0002-usb-gadget-Fix-memleak-in-gadgetfs_fill_super.patch
 	patches.suse/0003-USB-core-Fix-regression-in-Hercules-audio-card.patch
 	patches.suse/x86-resctrl-remove-superfluous-kernfs_get-calls-to-prevent-refcount-leak.patch
+	patches.suse/x86-resctrl-add-necessary-kernfs_put-calls-to-prevent-refcount-leak.patch
 	patches.suse/efivarfs-revert-fix-memory-leak-in-efivarfs_create.patch
 
 	# dhowells/linux-fs keys-uefi
