x86/speculation: Fix prctl() when spectre_v2_user={seccomp,prctl},ibpb (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -56536,6 +56536,7 @@
 	patches.suse/0003-USB-core-Fix-regression-in-Hercules-audio-card.patch
 	patches.suse/x86-resctrl-remove-superfluous-kernfs_get-calls-to-prevent-refcount-leak.patch
 	patches.suse/x86-resctrl-add-necessary-kernfs_put-calls-to-prevent-refcount-leak.patch
+	patches.suse/x86-speculation-fix-prctl-when-spectre_v2_user-seccomp-prctl-ibpb.patch
 	patches.suse/efivarfs-revert-fix-memory-leak-in-efivarfs_create.patch
 
 	# dhowells/linux-fs keys-uefi
