--- a/series.conf
+++ b/series.conf
@@ -56506,6 +56506,7 @@
 	patches.suse/net-mlx4_core-Fix-init_hca-fields-offset.patch
 	patches.suse/drm-sun4i-dw-hdmi-fix-error-return-code-in-sun8i_dw_.patch
 	patches.suse/drm-i915-gvt-Set-ENHANCED_FRAME_CAP-bit.patch
+	patches.suse/ALSA-hda-realtek-Add-some-Clove-SSID-in-the-ALC293-A.patch
 	patches.suse/ALSA-ctl-fix-error-path-at-adding-user-defined-eleme.patch
 	patches.suse/ALSA-firewire-Clean-up-a-locking-issue-in-copy_resp_.patch
 	patches.suse/ALSA-mixart-Fix-mutex-deadlock.patch
