--- a/series.conf
+++ b/series.conf
@@ -56541,6 +56541,7 @@
 	patches.suse/efivarfs-revert-fix-memory-leak-in-efivarfs_create.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-of-ASUS-UX482EG-B940.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC897.patch
+	patches.suse/ALSA-usb-audio-US16x08-fix-value-count-for-level-met.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
