ALSA: hda/realtek - Add new codec supported for ALC897 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56540,6 +56540,7 @@
 	patches.suse/x86-speculation-fix-prctl-when-spectre_v2_user-seccomp-prctl-ibpb.patch
 	patches.suse/efivarfs-revert-fix-memory-leak-in-efivarfs_create.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-of-ASUS-UX482EG-B940.patch
+	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC897.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
