--- a/series.conf
+++ b/series.conf
@@ -56539,6 +56539,7 @@
 	patches.suse/x86-resctrl-add-necessary-kernfs_put-calls-to-prevent-refcount-leak.patch
 	patches.suse/x86-speculation-fix-prctl-when-spectre_v2_user-seccomp-prctl-ibpb.patch
 	patches.suse/efivarfs-revert-fix-memory-leak-in-efivarfs_create.patch
+	patches.suse/ALSA-hda-realtek-Enable-headset-of-ASUS-UX482EG-B940.patch
 
 	# dhowells/linux-fs keys-uefi
 	patches.suse/0001-KEYS-Allow-unrestricted-boot-time-addition-of-keys-t.patch
