cifs: allow syscalls to be restarted in __smb_send_rqst() (bsc#1176956).

--- a/series.conf
+++ b/series.conf
@@ -56539,6 +56539,7 @@
 	patches.suse/x86-resctrl-add-necessary-kernfs_put-calls-to-prevent-refcount-leak.patch
 	patches.suse/x86-speculation-fix-prctl-when-spectre_v2_user-seccomp-prctl-ibpb.patch
 	patches.suse/efivarfs-revert-fix-memory-leak-in-efivarfs_create.patch
+	patches.suse/cifs-allow-syscalls-to-be-restarted-in-__smb_send_rqst-.patch
 	patches.suse/ALSA-hda-realtek-Enable-headset-of-ASUS-UX482EG-B940.patch
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC897.patch
 	patches.suse/ALSA-usb-audio-US16x08-fix-value-count-for-level-met.patch
