--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1684,3 +1684,4 @@ f1e2400a80ff55eb7c5f4fd9d7eb163fd0de9a2c # net: phy: already applied
 ea5ec9fc9eb8bb1eed5ff12dcec328dec918664f # net: ethernet: ti: already applied
 bf2ce3fdf314cd181908b55a4d6c58817674a062 # net: ethernet: ti: cpsw: already applied
 5a04e8f81a4f55ce1c2b7b525744a187c99ba302 # net: ethernet: davinci_emac: already applied
+586b58cac8b4683eb58a1446fbc399de18974e40 # too intrusive, improbable, bsc#1174019
