--- a/series.conf
+++ b/series.conf
@@ -56547,6 +56547,7 @@
 	patches.suse/ALSA-usb-audio-US16x08-fix-value-count-for-level-met.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-another-H.patch
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
+	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
