i2c: qup: Fix error return code in qup_i2c_bam_schedule_desc() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56546,6 +56546,7 @@
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC897.patch
 	patches.suse/ALSA-usb-audio-US16x08-fix-value-count-for-level-met.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-another-H.patch
+	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
