--- a/series.conf
+++ b/series.conf
@@ -56549,6 +56549,7 @@
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 	patches.suse/coredump-fix-core_pattern-parse-error.patch
+	patches.suse/USB-serial-option-fix-Quectel-BG96-matching.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
