--- a/series.conf
+++ b/series.conf
@@ -56548,6 +56548,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-another-H.patch
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
+	patches.suse/coredump-fix-core_pattern-parse-error.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
