--- a/series.conf
+++ b/series.conf
@@ -56550,6 +56550,7 @@
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 	patches.suse/coredump-fix-core_pattern-parse-error.patch
 	patches.suse/USB-serial-option-fix-Quectel-BG96-matching.patch
+	patches.suse/USB-serial-kl5kusb105-fix-memleak-on-open.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
