s390/qeth: make af_iucv TX notification call more robust (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56534,6 +56534,7 @@
 	patches.suse/btrfs-qgroup-don-t-commit-transaction-when-we-alread.patch
 	patches.suse/net-tls-missing-received-data-after-fast-remote-clos.patch
 	patches.suse/tcp-Set-INET_ECN_xmit-configuration-in-tcp_reinit_co.patch
+	patches.suse/s390-qeth-make-af_iucv-tx-notification-call-more-robust
 	patches.suse/nfc-s3fwrn5-use-signed-integer-for-parsing-GPIO-numb.patch
 	patches.suse/net-ena-handle-bad-request-id-in-ena_netdev.patch
 	patches.suse/net-ena-fix-packet-s-addresses-for-rx_offset-feature.patch
