s390/stp: add locking to sysfs functions (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56337,6 +56337,7 @@
 	patches.suse/powerpc-powernv-elog-Fix-race-while-processing-OPAL-.patch
 	patches.suse/powerpc-rtas-Restrict-RTAS-requests-from-userspace.patch
 	patches.suse/powerpc-perf-hv-gpci-Fix-starting-index-value.patch
+	patches.suse/s390-stp-add-locking-to-sysfs-functions
 	patches.suse/mtd-lpddr-Fix-bad-logic-in-print_drs_error.patch
 	patches.suse/mtd-lpddr-fix-excessive-stack-usage-with-clang.patch
 	patches.suse/mtd-mtdoops-Don-t-write-panic-data-twice.patch
