--- a/series.conf
+++ b/series.conf
@@ -56326,6 +56326,7 @@
 	patches.suse/net-fec-Fix-phy_device-lookup-for-phy_reset_after_cl.patch
 	patches.suse/ibmveth-Switch-order-of-ibmveth_helper-calls.patch
 	patches.suse/ibmveth-Identify-ingress-large-send-packets.patch
+	patches.suse/net-smc-fix-valid-dmbe-buffer-sizes
 	patches.suse/lib-crc32.c-fix-trivial-typo-in-preprocessor-conditi.patch
 	patches.suse/powerpc-pseries-Fix-missing-of_node_put-in-rng_init.patch
 	patches.suse/powerpc-icp-hv-Fix-missing-of_node_put-in-success-pa.patch
