s390/cpuinfo: show processor physical address (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54464,6 +54464,7 @@
 	patches.suse/msft-hv-2036-PCI-hv-Move-retarget-related-structures-into-tlfs-he.patch
 	patches.suse/msft-hv-2037-PCI-hv-Introduce-hv_msi_entry.patch
 	patches.suse/s390-cpum_cf-add-new-extended-counters-for-ibm-z15
+	patches.suse/s390-cpuinfo-show-processor-physical-address
 	patches.suse/s390-cpuinfo-fix-wrong-output-when-cpu0-is-offline
 	patches.suse/s390-diag-fix-display-of-diagnose-call-statistics
 	patches.suse/rtc-ds1374-fix-possible-race-condition.patch
