--- a/series.conf
+++ b/series.conf
@@ -56556,6 +56556,7 @@
 	patches.suse/ALSA-hda-realtek-Add-new-codec-supported-for-ALC897.patch
 	patches.suse/ALSA-usb-audio-US16x08-fix-value-count-for-level-met.patch
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-another-H.patch
+	patches.suse/s390-pci-fix-cpu-address-in-msi-for-directed-irq
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 
