s390/zcrypt: Fix ZCRYPT_PERDEV_REQCNT ioctl (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56068,6 +56068,7 @@
 	patches.suse/drm-sun4i-mixer-Extend-regmap-max_register.patch
 	patches.suse/spi-fsl-espi-Only-process-interrupts-for-expected-ev.patch
 	patches.suse/kvm-svm-add-a-dedicated-invd-intercept-routine.patch
+	patches.suse/s390-zcrypt-fix-zcrypt_perdev_reqcnt-ioctl
 	patches.suse/scsi-lpfc-Fix-initial-FLOGI-failure-due-to-BBSCN-not.patch
 	patches.suse/clocksource-drivers-h8300_timer8-Fix-wrong-return-va.patch
 	patches.suse/nfs-Fix-security-label-length-not-being-reset.patch
