s390/dasd: fix null pointer dereference for ERP requests (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56518,6 +56518,7 @@
 	patches.suse/ALSA-firewire-Clean-up-a-locking-issue-in-copy_resp_.patch
 	patches.suse/ALSA-mixart-Fix-mutex-deadlock.patch
 	patches.suse/ASoC-qcom-lpass-platform-Fix-memory-leak.patch
+	patches.suse/s390-dasd-fix-null-pointer-dereference-for-erp-requests
 	patches.suse/xfs-revert-xfs-fix-rmap-key-and-record-comparison-fu.patch
 	patches.suse/tty-serial-imx-keep-console-clocks-always-on.patch
 	patches.suse/staging-rtl8723bs-Add-024c-0627-to-the-list-of-SDIO-.patch
