--- a/series.conf
+++ b/series.conf
@@ -56307,6 +56307,7 @@
 	patches.suse/net-ena-Change-RSS-related-macros-and-variables-name.patch
 	patches.suse/net-ena-Fix-all-static-chekers-warnings.patch
 	patches.suse/can-flexcan-flexcan_chip_stop-add-error-handling-and.patch
+	patches.suse/s390-bpf-fix-multiple-tail-calls
 	patches.suse/ath9k-hif_usb-fix-race-condition-between-usb_get_urb.patch
 	patches.suse/ath6kl-wmi-prevent-a-shift-wrapping-bug-in-ath6kl_wm.patch
 	patches.suse/Bluetooth-Only-mark-socket-zapped-after-unlocking.patch
