--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1685,3 +1685,6 @@ ea5ec9fc9eb8bb1eed5ff12dcec328dec918664f # net: ethernet: ti: already applied
 bf2ce3fdf314cd181908b55a4d6c58817674a062 # net: ethernet: ti: cpsw: already applied
 5a04e8f81a4f55ce1c2b7b525744a187c99ba302 # net: ethernet: davinci_emac: already applied
 586b58cac8b4683eb58a1446fbc399de18974e40 # too intrusive, improbable, bsc#1174019
+0241b836732f5f43c3f0fd9e9073c1fb24ea6757 # vxlan: already applied
+d26ed6b0e5e23190d43ab34bc69cbecdc464a2cf # net: aquantia: already applied
+448765e1cfa6b9b286dc45b0224b9a641b05eeb9 # net: dsa: bcm_sf2: already applied
