--- a/series.conf
+++ b/series.conf
@@ -19164,6 +19164,7 @@
 	patches.suse/net-stmmac-enable-EEE-in-MII-GMII-or-RGMII-only.patch
 	patches.suse/sh_eth-fix-TSU-resource-handling.patch
 	patches.suse/RDS-null-pointer-dereference-in-rds_atomic_free_op.patch
+	patches.suse/0001-uapi-if_ether.h-prevent-redefinition-of-struct-ethhd.patch
 	patches.suse/netfilter-uapi-correct-untracked-conntrack-state-bit-number
 	patches.suse/net-fec-free-restore-resource-in-related-probe-error.patch
 	patches.suse/can-vxcan-improve-handling-of-missing-peer-name-attr
