net: stmmac: Fix reception of Broadcom switches tags (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -21854,6 +21854,7 @@
 	patches.suse/net-hns3-add-manager-table-initialization-for-hardwa.patch
 	patches.suse/net-hns3-add-ethtool-p-support-for-fiber-port.patch
 	patches.suse/net-hns3-add-net-status-led-support-for-fiber-port.patch
+	patches.suse/0002-net-stmmac-Fix-reception-of-Broadcom-switches-tags.patch
 	patches.suse/bridge-return-boolean-instead-of-integer-in-br_multi.patch
 	patches.suse/net-hns3-converting-spaces-into-tabs-to-avoid-checkp.patch
 	patches.suse/msft-hv-1585-hv_netvsc-Use-the-num_online_cpus-for-channel-limit.patch
