- ipvlan: use per device spinlock to protect addrs list updates (git-fixes). - Refresh patches.suse/ipvlan-do-not-add-hardware-address-of-master-to-its-.patch. - Refresh patches.suse/ipvlan-fix-IFLA_MTU-ignored-on-NEWLINK.patch.

--- a/series.conf
+++ b/series.conf
@@ -27493,6 +27493,7 @@
 	patches.suse/mlxsw-spectrum-qdiscs-prio-Delete-child-qdiscs-when-.patch
 	patches.suse/net-sch-prio-Add-offload-ability-for-grafting-a-chil.patch
 	patches.suse/mlxsw-spectrum-qdiscs-prio-Handle-graft-command.patch
+	patches.suse/0003-ipvlan-use-per-device-spinlock-to-protect-addrs-list.patch
 	patches.suse/fm10k-fix-function-doxygen-comments.patch
 	patches.suse/fm10k-fix-incorrect-warning-for-function-prototype.patch
 	patches.suse/fm10k-bump-version-number-e9d328d3.patch
