ppp: remove the PPPIOCDETACH ioctl (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -30850,6 +30850,7 @@
 	patches.suse/vhost-synchronize-IOTLB-message-with-dev-cleanup.patch
 	patches.suse/net-sched-cls_api-deal-with-egdev-path-only-if-neede.patch
 	patches.suse/ipv4-remove-warning-in-ip_recv_error.patch
+	patches.suse/0004-ppp-remove-the-PPPIOCDETACH-ioctl.patch
 	patches.suse/enic-set-DMA-mask-to-47-bit.patch
 	patches.suse/mlx4_core-allocate-ICM-memory-in-page-size-chunks.patch
 	patches.suse/batman-adv-Avoid-race-in-TT-TVLV-allocator-helper.patch
