net: ethernet: ti: cpsw: clear all entries when delete vid (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -35832,6 +35832,7 @@
 	patches.suse/xdp-fix-bug-in-cpumap-teardown-code-path.patch
 	patches.suse/samples-bpf-xdp_redirect_cpu-adjustment-to-reproduce.patch
 	patches.suse/xdp-fix-bug-in-devmap-teardown-code-path.patch
+	patches.suse/0005-net-ethernet-ti-cpsw-clear-all-entries-when-delete-v.patch
 	patches.suse/xen-netfront-dont-cache-skb_shinfo.patch
 	patches.suse/root-dentries-need-RCU-delayed-freeing.patch
 	patches.suse/fix-mntputmntput-race.patch
