--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1688,3 +1688,5 @@ bf2ce3fdf314cd181908b55a4d6c58817674a062 # net: ethernet: ti: cpsw: already appl
 0241b836732f5f43c3f0fd9e9073c1fb24ea6757 # vxlan: already applied
 d26ed6b0e5e23190d43ab34bc69cbecdc464a2cf # net: aquantia: already applied
 448765e1cfa6b9b286dc45b0224b9a641b05eeb9 # net: dsa: bcm_sf2: already applied
+abd01ba2f7d74bf138ce2404a76714ecbc175dc9 # net: dsa: bcm_sf2: already applied
+
