--- a/series.conf
+++ b/series.conf
@@ -44409,6 +44409,7 @@
 	patches.suse/net-mvpp2-10G-modes-aren-t-supported-on-all-ports.patch
 	patches.suse/qed-Fix-an-error-code-qed_ll2_start_xmit.patch
 	patches.suse/net-macb-restart-tx-after-tx-used-bit-read.patch
+	patches.suse/0001-net-macb-fix-random-memory-corruption-on-RX-with-64-.patch
 	patches.suse/vxlan-Unmark-offloaded-bit-on-replaced-FDB-entries.patch
 	patches.suse/lan78xx-Resolve-issue-with-changing-MAC-address.patch
 	patches.suse/net-phy-Fix-the-issue-that-netif-always-links-up-aft.patch
