ext4: fix error handling code in add_new_gdb (bsc#1179722).

--- a/series.conf
+++ b/series.conf
@@ -56377,6 +56377,7 @@
 	patches.suse/svcrdma-fix-bounce-buffers-for-unaligned-offsets-and.patch
 	patches.suse/SUNRPC-fix-copying-of-multiple-pages-in-gss_read_pro.patch
 	patches.suse/ext4-fix-leaking-sysfs-kobject-after-failed-mount.patch
+	patches.suse/ext4-fix-error-handling-code-in-add_new_gdb.patch
 	patches.suse/x86-PCI-Fix-intel_mid_pci.c-build-error-when-ACPI-is.patch
 	patches.suse/clk-ti-clockdomain-fix-static-checker-warning.patch
 	patches.suse/clk-at91-remove-the-checking-of-parent_name.patch
