--- a/series.conf
+++ b/series.conf
@@ -56379,6 +56379,7 @@
 	patches.suse/ext4-fix-leaking-sysfs-kobject-after-failed-mount.patch
 	patches.suse/ext4-fix-error-handling-code-in-add_new_gdb.patch
 	patches.suse/ext4-limit-entries-returned-when-counting-fsmap-reco.patch
+	patches.suse/ext4-fix-invalid-inode-checksum.patch
 	patches.suse/x86-PCI-Fix-intel_mid_pci.c-build-error-when-ACPI-is.patch
 	patches.suse/clk-ti-clockdomain-fix-static-checker-warning.patch
 	patches.suse/clk-at91-remove-the-checking-of-parent_name.patch
