--- a/series.conf
+++ b/series.conf
@@ -56478,6 +56478,7 @@
 	patches.suse/USB-serial-option-add-LE910Cx-compositions-0x1203-0x.patch
 	patches.suse/USB-serial-option-add-Telit-FN980-composition-0x1055.patch
 	patches.suse/vt-Disable-KD_FONT_OP_COPY.patch
+	patches.suse/ext4-correctly-report-not-supported-for-usr-grp-jquo.patch
 	patches.suse/powercap-Restrict-energy-meter-to-root-access.patch
 	patches.suse/ACPI-GED-fix-Wformat.patch
 	patches.suse/bpf-Zero-fill-re-used-per-cpu-map-element.patch
