--- a/series.conf
+++ b/series.conf
@@ -56147,6 +56147,7 @@
 	patches.suse/media-firewire-fix-memory-leak.patch
 	patches.suse/media-usbtv-Fix-refcounting-mixup.patch
 	patches.suse/regulator-resolve-supply-after-creating-regulator.patch
+	patches.suse/fs-Don-t-invalidate-page-buffers-in-block_write_full.patch
 	patches.suse/xen-gntdev.c-Mark-pages-as-dirty.patch
 	patches.suse/x86-xen-disable-Firmware-First-mode-for-correctable-.patch
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-configur.patch
