reiserfs: Initialize inode keys properly (bsc#1179713).

--- a/series.conf
+++ b/series.conf
@@ -56277,6 +56277,7 @@
 	patches.suse/ASoC-qcom-lpass-platform-fix-memory-leak.patch
 	patches.suse/ASoC-qcom-lpass-cpu-fix-concurrency-issue.patch
 	patches.suse/dmaengine-dma-jz4780-Fix-race-in-jz4780_dma_tx_statu.patch
+	patches.suse/reiserfs-Initialize-inode-keys-properly.patch
 	patches.suse/HID-roccat-add-bounds-checking-in-kone_sysfs_write_s.patch
 	patches.suse/HID-wacom-Avoid-entering-wacom_wac_pen_report-for-pa.patch
 	patches.suse/ima-Remove-semicolon-at-the-end-of-ima_get_binary_ru.patch
