--- a/series.conf
+++ b/series.conf
@@ -56279,6 +56279,7 @@
 	patches.suse/dmaengine-dma-jz4780-Fix-race-in-jz4780_dma_tx_statu.patch
 	patches.suse/reiserfs-Initialize-inode-keys-properly.patch
 	patches.suse/quota-clear-padding-in-v2r1_mem2diskdqb.patch
+	patches.suse/reiserfs-Fix-oops-during-mount.patch
 	patches.suse/HID-roccat-add-bounds-checking-in-kone_sysfs_write_s.patch
 	patches.suse/HID-wacom-Avoid-entering-wacom_wac_pen_report-for-pa.patch
 	patches.suse/ima-Remove-semicolon-at-the-end-of-ima_get_binary_ru.patch
