--- a/series.conf
+++ b/series.conf
@@ -56531,6 +56531,7 @@
 	patches.suse/ASoC-qcom-lpass-platform-Fix-memory-leak.patch
 	patches.suse/s390-dasd-fix-null-pointer-dereference-for-erp-requests
 	patches.suse/xfs-revert-xfs-fix-rmap-key-and-record-comparison-fu.patch
+	patches.suse/ext4-fix-bogus-warning-in-ext4_update_dx_flag.patch
 	patches.suse/tty-serial-imx-keep-console-clocks-always-on.patch
 	patches.suse/staging-rtl8723bs-Add-024c-0627-to-the-list-of-SDIO-.patch
 	patches.suse/iio-accel-kxcjk1013-Replace-is_smo8500_device-with-a.patch
