btmrvl: Fix firmware filename for sd8997 chipset (bsc#1172694).

--- a/series.conf
+++ b/series.conf
@@ -55607,6 +55607,7 @@
 	patches.suse/net-ena-enable-support-of-rss-hash-key-and-function-.patch
 	patches.suse/net-ena-move-llq-configuration-from-ena_probe-to-ena.patch
 	patches.suse/net-ena-support-new-LLQ-acceleration-mode.patch
+	patches.suse/btmrvl-Fix-firmware-filename-for-sd8997-chipset.patch
 	patches.suse/Bluetooth-Disconnect-if-E0-is-used-for-Level-4.patch
 	patches.suse/Bluetooth-Fix-slab-out-of-bounds-read-in-hci_extende.patch
 	patches.suse/Bluetooth-Prevent-out-of-bounds-read-in-hci_inquiry_.patch
