--- a/series.conf
+++ b/series.conf
@@ -57493,6 +57493,7 @@
 	patches.kabi/bluetooth-l2cap-filter-ops-kABI-workaround.patch
 	patches.kabi/kABI-powerpc-avoid-including-pgtable.h-in-kup.h.patch
 	patches.kabi/kABI-powerpc-Add-back-__clear_user.patch
+	patches.kabi/ipvlan_addr_lock_kabi.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
