blacklist.conf: kABI issues

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1688,3 +1688,4 @@ bf2ce3fdf314cd181908b55a4d6c58817674a062 # net: ethernet: ti: cpsw: already appl
 2e7c8fb8942773f412fe12f3b63e8bb92c18ab3f # falsly attributed. Bug introduced in v5.2 by 997deb811bf55731a7c0bd972d8d0a266ef8d7e5
 6c8d0cdd6ccb21badd52a10d627f80cf1a6ab63f # cosmetic fix
 3e487d2e4aa466decd226353755c9d423e8fbacc # crashes some machines, cause unknown so far
+894c9ef9780c5cf2f143415e867ee39a33ecb75d # requires prerequisites breaing kABI
