kgdb: Fix spurious true from in_dbg_master() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -54954,6 +54954,7 @@
 	patches.suse/btrfs-fix-space_info-bytes_may_use-underflow-during-.patch
 	patches.suse/clocksource-dw_apb_timer-Make-CPU-affiliation-being-.patch
 	patches.suse/clocksource-dw_apb_timer_of-Fix-missing-clockevent-t.patch
+	patches.suse/kgdb-Fix-spurious-true-from-in_dbg_master.patch
 	patches.suse/kvm-nvmx-skip-ibpb-when-switching-between-vmcs01-and-vmcs02.patch
 	patches.suse/kvm-x86-only-do-l1tf-workaround-on-affected-processors
 	patches.suse/kvm-x86-mmu-set-mmio_value-to-0-if-reserved-pf-can-t-be-generated
