--- a/series.conf
+++ b/series.conf
@@ -56572,6 +56572,7 @@
 	patches.suse/coredump-fix-core_pattern-parse-error.patch
 	patches.suse/USB-serial-option-fix-Quectel-BG96-matching.patch
 	patches.suse/USB-serial-kl5kusb105-fix-memleak-on-open.patch
+	patches.suse/usb-gadget-f_fs-Use-local-copy-of-descriptors-for-us.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 
 	# powerpc/linux next
