uapi/if_ether.h: move __UAPI_DEF_ETHHDR libc define (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -24654,6 +24654,7 @@
 	patches.suse/0001-net-thunderbolt-Tear-down-connection-properly-on-sus.patch
 	patches.suse/0001-net-thunderbolt-Run-disconnect-flow-asynchronously-w.patch
 	patches.suse/net-cavium-fix-NULL-pointer-dereference-in-cavium_pt.patch
+	patches.suse/0001-uapi-if_ether.h-move-__UAPI_DEF_ETHHDR-libc-define.patch
 	patches.suse/mlxsw-spectrum_router-Fix-error-path-in-mlxsw_sp_vr_.patch
 	patches.suse/net-sched-don-t-set-q-pointer-for-shared-blocks.patch
 	patches.suse/net-sched-fix-tc_u_common-lookup.patch
