--- a/series.conf
+++ b/series.conf
@@ -56566,6 +56566,7 @@
 	patches.suse/s390-qeth-make-af_iucv-tx-notification-call-more-robust
 	patches.suse/s390-qeth-fix-af_iucv-notification-race
 	patches.suse/s390-qeth-fix-tear-down-of-async-tx-buffers
+	patches.suse/usbnet-ipheth-fix-connectivity-with-iOS-14.patch
 	patches.suse/nfc-s3fwrn5-use-signed-integer-for-parsing-GPIO-numb.patch
 	patches.suse/net-ena-handle-bad-request-id-in-ena_netdev.patch
 	patches.suse/net-ena-fix-packet-s-addresses-for-rx_offset-feature.patch
