--- a/series.conf
+++ b/series.conf
@@ -56591,6 +56591,7 @@
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 	patches.suse/Input-i8042-add-ByteSpeed-touchpad-to-noloop-table.patch
+	patches.suse/Input-xpad-support-Ardwiino-Controllers.patch
 	patches.suse/coredump-fix-core_pattern-parse-error.patch
 	patches.suse/USB-serial-option-fix-Quectel-BG96-matching.patch
 	patches.suse/USB-serial-kl5kusb105-fix-memleak-on-open.patch
