--- a/series.conf
+++ b/series.conf
@@ -56566,6 +56566,7 @@
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 	patches.suse/coredump-fix-core_pattern-parse-error.patch
 	patches.suse/x86-uprobes-do-not-use-prefixes-nbytes-when-looping-over-prefixes-bytes.patch
+	patches.suse/x86-insn-eval-use-new-for_each_insn_prefix-macro-to-loop-over-prefixes-bytes.patch
 	patches.suse/USB-serial-option-fix-Quectel-BG96-matching.patch
 	patches.suse/USB-serial-kl5kusb105-fix-memleak-on-open.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
