timer: Fix wheel index calculation on last level (git fixes)

--- a/series.conf
+++ b/series.conf
@@ -55409,6 +55409,7 @@
 	patches.suse/usb-gadget-udc-atmel-fix-uninitialized-read-in-debug.patch
 	patches.suse/USB-serial-iuu_phoenix-fix-memory-corruption.patch
 	patches.suse/timer-Prevent-base-clk-from-moving-backward.patch
+	patches.suse/timer-Fix-wheel-index-calculation-on-last-level.patch
 	patches.suse/ASoC-rt5670-Correct-RT5670_LDO_SEL_MASK.patch
 	patches.suse/ALSA-hda-realtek-Fixed-ALC298-sound-bug-by-adding-qu.patch
 	patches.suse/s390-cpum_cf-perf-change-dflt_ccerror-counter-name
