--- a/series.conf
+++ b/series.conf
@@ -46387,6 +46387,7 @@
 	patches.suse/net-mlx5e-XDP-fix-redirect-resources-availability-ch.patch
 	patches.suse/sctp-call-gso_reset_checksum-when-computing-checksum.patch
 	patches.suse/dsa-mv88e6xxx-Ensure-all-pending-interrupts-are-hand.patch
+	patches.suse/0001-net-dsa-bcm_sf2-potential-array-overflow-in-bcm_sf2_.patch
 	patches.suse/net-hns-Fix-object-reference-leaks-in-hns_dsaf_roce_.patch
 	patches.suse/drm-imx-ignore-plane-updates-on-disabled-crtcs.patch
 	patches.suse/0001-gpu-ipu-v3-Fix-i.MX51-CSI-control-registers-offset.patch
