net: dsa: b53: Properly account for VLAN filtering (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -46440,6 +46440,7 @@
 	patches.suse/net-Fix-for_each_netdev_feature-on-Big-endian.patch
 	patches.suse/net-validate-untrusted-gso-packets-without-csum-offl.patch
 	patches.suse/0002-net-dsa-b53-Fix-default-VLAN-ID.patch
+	patches.suse/0003-net-dsa-b53-Properly-account-for-VLAN-filtering.patch
 	patches.suse/net-Add-header-for-usage-of-fls64.patch
 	patches.suse/xsk-add-missing-smp_rmb-in-xsk_mmap.patch
 	patches.suse/bpf-fix-lockdep-false-positive-in-stackmap.patch
