--- a/series.conf
+++ b/series.conf
@@ -47633,6 +47633,7 @@
 	patches.suse/0001-net-mlx5e-IPoIB-Fix-RX-checksum-statistics-update.patch
 	patches.suse/net-mlx5-Avoid-panic-when-setting-vport-mac-getting-.patch
 	patches.suse/net-mlx5-Avoid-panic-when-setting-vport-rate.patch
+	patches.suse/0004-net-sh_eth-fix-a-missing-check-of-of_get_phy_mode.patch
 	patches.suse/0001-net-mlx4_core-Fix-reset-flow-when-in-command-polling.patch
 	patches.suse/0001-net-mlx4_core-Fix-locking-in-SRIOV-mode-when-switchi.patch
 	patches.suse/0001-net-mlx4_core-Fix-qp-mtt-size-calculation.patch
