net: dsa: qca8k: remove leftover phy accessors (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -47832,6 +47832,7 @@
 	patches.suse/bpf-do-not-restore-dst_reg-when-cur_state-is-freed.patch
 	patches.suse/bpf-verifier-propagate-liveness-on-all-frames.patch
 	patches.suse/net-phy-don-t-clear-BMCR-in-genphy_soft_reset.patch
+	patches.suse/0005-net-dsa-qca8k-remove-leftover-phy-accessors.patch
 	patches.suse/chelsio-use-BUG-instead-of-BUG_ON-1.patch
 	patches.suse/ARM-imx6q-cpuidle-fix-bug-that-CPU-might-not-wake-up.patch
 	patches.suse/s390-vtime-steal-time-exponential-moving-average.patch
