--- a/series.conf
+++ b/series.conf
@@ -49511,6 +49511,7 @@
 	patches.suse/fs-writeback.c-use-rcu_barrier-to-wait-for-inflight-.patch
 	patches.suse/net-mlx4_core-Change-the-error-print-to-info-print.patch
 	patches.suse/rtnetlink-always-put-IFLA_LINK-for-links-with-a-link.patch
+	patches.suse/0006-net-macb-fix-error-format-in-dev_err.patch
 	patches.suse/ppp-deflate-Fix-possible-crash-in-deflate_init.patch
 	patches.suse/nfp-flower-add-rcu-locks-when-accessing-netdev-for-t.patch
 	patches.suse/bpf-devmap-fix-use-after-free-Read-in-__dev_map_entr.patch
