net: stmmac: fix csr_clk can't be zero issue (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -49605,6 +49605,7 @@
 	patches.suse/cxgb4-offload-VLAN-flows-regardless-of-VLAN-ethtype.patch
 	patches.suse/net-fec-fix-the-clk-mismatch-in-failed_reset-path.patch
 	patches.suse/cxgb4-Revert-cxgb4-Remove-SGE_HOST_PAGE_SIZE-depende.patch
+	patches.suse/0007-net-stmmac-fix-csr_clk-can-t-be-zero-issue.patch
 	patches.suse/bonding-802.3ad-fix-slave-link-initialization-transi.patch
 	patches.suse/net-tulip-de4x5-Drop-redundant-MODULE_DEVICE_TABLE.patch
 	patches.suse/net-mvneta-Fix-err-code-path-of-probe.patch
