net: aquantia: fix LRO with FCS error (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -49608,6 +49608,7 @@
 	patches.suse/0007-net-stmmac-fix-csr_clk-can-t-be-zero-issue.patch
 	patches.suse/bonding-802.3ad-fix-slave-link-initialization-transi.patch
 	patches.suse/net-tulip-de4x5-Drop-redundant-MODULE_DEVICE_TABLE.patch
+	patches.suse/0008-net-aquantia-fix-LRO-with-FCS-error.patch
 	patches.suse/net-mvneta-Fix-err-code-path-of-probe.patch
 	patches.suse/llc-fix-skb-leak-in-llc_build_and_send_ui_pkt.patch
 	patches.suse/net-phy-marvell10g-report-if-the-PHY-fails-to-boot-f.patch
