blacklist.conf: 5861381d4866 PM / arch: x86: Rework the MSR_IA32_ENERGY_PERF_BIAS handling
Signed-off-by: Borislav Petkov <bp@suse.de>

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1693,3 +1693,4 @@ bf2ce3fdf314cd181908b55a4d6c58817674a062 # net: ethernet: ti: cpsw: already appl
 d26ed6b0e5e23190d43ab34bc69cbecdc464a2cf # net: aquantia: already applied
 448765e1cfa6b9b286dc45b0224b9a641b05eeb9 # net: dsa: bcm_sf2: already applied
 abd01ba2f7d74bf138ce2404a76714ecbc175dc9 # net: dsa: bcm_sf2: already applied
+5861381d486601430cccf64849bd0a226154bc0d # kABI breakage due to enum cpuhp_state change
