--- a/series.conf
+++ b/series.conf
@@ -56609,6 +56609,9 @@
 	patches.suse/usb-gadget-f_fs-Use-local-copy-of-descriptors-for-us.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 
+	# davem/net-next
+	patches.suse/ibmvnic-add-some-debugs.patch
+
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
 
