--- a/series.conf
+++ b/series.conf
@@ -56603,6 +56603,7 @@
 	patches.suse/Input-xpad-support-Ardwiino-Controllers.patch
 	patches.suse/coredump-fix-core_pattern-parse-error.patch
 	patches.suse/genirq-irqdomain-Add-an-irq_create_mapping_affinity-.patch
+	patches.suse/powerpc-pseries-Pass-MSI-affinity-to-irq_create_mapp.patch
 	patches.suse/x86-uprobes-do-not-use-prefixes-nbytes-when-looping-over-prefixes-bytes.patch
 	patches.suse/x86-insn-eval-use-new-for_each_insn_prefix-macro-to-loop-over-prefixes-bytes.patch
 	patches.suse/USB-serial-option-fix-Quectel-BG96-matching.patch
