--- a/series.conf
+++ b/series.conf
@@ -56594,6 +56594,7 @@
 	patches.suse/ALSA-hda-realtek-Add-mute-LED-quirk-to-yet-another-H.patch
 	patches.suse/s390-pci-fix-cpu-address-in-msi-for-directed-irq
 	patches.suse/ibmvnic-avoid-memset-null-scrq-msgs.patch
+	patches.suse/ibmvnic-restore-adapter-state-on-failed-reset.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
