--- a/series.conf
+++ b/series.conf
@@ -56597,6 +56597,7 @@
 	patches.suse/ibmvnic-restore-adapter-state-on-failed-reset.patch
 	patches.suse/ibmvnic-delay-next-reset-if-hard-reset-fails.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
+	patches.suse/powerpc-64s-Fix-hash-ISA-v3.0-TLBIEL-instruction-gen.patch
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
 	patches.suse/Input-i8042-fix-error-return-code-in-i8042_setup_aux.patch
 	patches.suse/Input-i8042-add-ByteSpeed-touchpad-to-noloop-table.patch
