kABI: genirq: add back irq_create_mapping (bsc#1065729).

--- a/series.conf
+++ b/series.conf
@@ -57532,6 +57532,7 @@
 	patches.kabi/kABI-powerpc-Add-back-__clear_user.patch
 	patches.kabi/kABI-fix-for-g2d.patch
 	patches.kabi/ipvlan_addr_lock_kabi.patch
+	patches.kabi/kABI-genirq-add-back-irq_create_mapping.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
