--- a/series.conf
+++ b/series.conf
@@ -56613,6 +56613,7 @@
 	patches.suse/usb-gadget-f_fs-Use-local-copy-of-descriptors-for-us.patch
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 	patches.suse/tty-Fix-session-locking.patch
+	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
