--- a/series.conf
+++ b/series.conf
@@ -56614,6 +56614,7 @@
 	patches.suse/tty-Fix-pgrp-locking-in-tiocspgrp.patch
 	patches.suse/tty-Fix-session-locking.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
+	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
