net: dsa: b53: Always use dev->vlan_enabled in b53_configure_vlan() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53791,6 +53791,7 @@
 	patches.suse/net-systemport-Avoid-RBUF-stuck-in-Wake-on-LAN-mode.patch
 	patches.suse/net-mlx5-IPsec-Fix-esp-modify-function-attribute.patch
 	patches.suse/net-mlx5-IPsec-fix-memory-leak-at-mlx5_fpga_ipsec_de.patch
+	patches.suse/0001-net-dsa-b53-Always-use-dev-vlan_enabled-in-b53_confi.patch
 	patches.suse/msft-hv-2023-hv_netvsc-Fix-XDP-refcnt-for-synthetic-and-VF-NICs.patch
 	patches.suse/mlxsw-spectrum_dpipe-Add-missing-error-path.patch
 	patches.suse/mwifiex-fix-unbalanced-locking-in-mwifiex_process_co.patch
