net: dsa: b53: Ensure the default VID is untagged (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -53892,6 +53892,7 @@
 	patches.suse/ipv6-Fix-nlmsg_flags-when-splitting-a-multipath-rout.patch
 	patches.suse/net-fib_rules-Correctly-set-table-field-when-table-n.patch
 	patches.suse/net-phy-restore-mdio-regs-in-the-iproc-mdio-driver.patch
+	patches.suse/0001-net-dsa-b53-Ensure-the-default-VID-is-untagged.patch
 	patches.suse/NFC-pn544-Fix-a-typo-in-a-debug-message.patch
 	patches.suse/net-sched-correct-flower-port-blocking.patch
 	patches.suse/sctp-move-the-format-error-check-out-of-__sctp_sf_do.patch
