- x86/traps: Simplify pagefault tracing logic (bsc#1179895). - Refresh   patches.suse/10-x86-xen-get-rid-of-paravirt-op-adjust_exception_frame.patch. - Refresh   patches.suse/msft-hv-1590-x86-hyperv-Reenlightenment-notifications-support.patch. - Refresh   patches.suse/msft-hv-1616-Drivers-hv-vmbus-Implement-Direct-Mode-for-stimer0.patch.

--- a/series.conf
+++ b/series.conf
@@ -7938,6 +7938,7 @@
 	patches.suse/37-x86-intel_rdt-turn-off-most-rdt-features-on-skylake.patch
 	patches.suse/x86-boot-move-eisa-setup-to-a-separate-file
 	patches.suse/x86-tracing-introduce-a-static-key-for-exception-tracing.patch
+	patches.suse/x86-traps-simplify-pagefault-tracing-logic.patch
 	patches.suse/x86-eisa-add-missing-include
 	patches.suse/10-x86-xen-get-rid-of-paravirt-op-adjust_exception_frame.patch
 	patches.suse/parisc-ipmi_si_intf-Fix-section-mismatches-on-parisc.patch
