btrfs: fix use-after-free on readahead extent after failure to create it (bsc#1179963).

--- a/series.conf
+++ b/series.conf
@@ -56453,6 +56453,7 @@
 	patches.suse/ACPI-dock-fix-enum-conversion-warning.patch
 	patches.suse/device-property-Keep-secondary-firmware-node-seconda.patch
 	patches.suse/device-property-Don-t-clear-secondary-pointer-for-sh.patch
+	patches.suse/btrfs-fix-use-after-free-on-readahead-extent-after-f.patch
 	patches.suse/scsi-ibmvscsi-Fix-potential-race-after-loss-of-trans.patch
 	patches.suse/usb-host-fsl-mph-dr-of-check-return-of-dma_set_mask.patch
 	patches.suse/usb-cdc-acm-fix-cooldown-mechanism.patch
