md/raid5: fix oops during stripe resizing (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56169,6 +56169,7 @@
 	patches.suse/media-usbtv-Fix-refcounting-mixup.patch
 	patches.suse/regulator-resolve-supply-after-creating-regulator.patch
 	patches.suse/fs-Don-t-invalidate-page-buffers-in-block_write_full.patch
+	patches.suse/md-raid5-fix-oops-during-stripe-resizing.patch
 	patches.suse/xen-gntdev.c-Mark-pages-as-dirty.patch
 	patches.suse/x86-xen-disable-Firmware-First-mode-for-correctable-.patch
 	patches.suse/platform-x86-mlx-platform-Remove-PSU-EEPROM-configur.patch
