--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1694,3 +1694,7 @@ d26ed6b0e5e23190d43ab34bc69cbecdc464a2cf # net: aquantia: already applied
 448765e1cfa6b9b286dc45b0224b9a641b05eeb9 # net: dsa: bcm_sf2: already applied
 abd01ba2f7d74bf138ce2404a76714ecbc175dc9 # net: dsa: bcm_sf2: already applied
 5861381d486601430cccf64849bd0a226154bc0d # kABI breakage due to enum cpuhp_state change
+cd796ed3345030aa1bb332fe5c793b3dddaf56e7 # low priority and breaks kabi badly
+1c709b766e73e54d64b1dde1b7cfbcf25bcb15b9 # purely cosmetic
+d03727b248d0dae6199569a8d7b629a681154633 # reverted by 65caafd0d214
+65caafd0d2145d1dd02072c4ced540624daeab40 # revert of above
