--- a/series.conf
+++ b/series.conf
@@ -55300,6 +55300,7 @@
 	patches.suse/nvme-fix-possible-deadlock-when-I-O-is-blocked.patch
 	patches.suse/sunrpc-fixed-rollback-in-rpc_gssd_dummy_populate.patch
 	patches.suse/pNFS-flexfiles-Fix-list-corruption-if-the-mirror-cou.patch
+	patches.suse/SUNRPC-Properly-set-the-subbuf-parameter-of-xdr_buf_.patch
 	patches.suse/edac-amd64-read-back-the-scrub-rate-pci-register-on-f15h.patch
 	patches.suse/usb-host-ehci-exynos-Fix-error-check-in-exynos_ehci_.patch
 	patches.suse/usb-add-USB_QUIRK_DELAY_INIT-for-Logitech-C922.patch
