NFSv4.2: fix client's attribute cache management for copy_file_range (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56096,6 +56096,7 @@
 	patches.suse/scsi-lpfc-Fix-initial-FLOGI-failure-due-to-BBSCN-not.patch
 	patches.suse/clocksource-drivers-h8300_timer8-Fix-wrong-return-va.patch
 	patches.suse/nfs-Fix-security-label-length-not-being-reset.patch
+	patches.suse/NFSv4.2-fix-client-s-attribute-cache-management-for-.patch
 	patches.suse/clk-samsung-exynos4-mark-chipid-clock-as-CLK_IGNORE_.patch
 	patches.suse/ftrace-move-rcu-is-watching-check-after-recursion-check.patch
 	patches.suse/drm-amdgpu-prevent-double-kfree-ttm-sg.patch
