--- a/series.conf
+++ b/series.conf
@@ -56402,6 +56402,7 @@
 	patches.suse/0011-xen-events-defer-eoi-in-case-of-excessive-number-of-.patch
 	patches.suse/0012-xen-events-block-rogue-events-for-some-time.patch
 	patches.suse/power-supply-test_power-add-missing-newlines-when-pr.patch
+	patches.suse/NFS-fix-nfs_path-in-case-of-a-rename-retry.patch
 	patches.suse/ceph-promote-to-unsigned-long-long-before-shifting.patch
 	patches.suse/libceph-clear-con-out_msg-on-policy-stateful_server-faults.patch
 	patches.suse/i2c-imx-Fix-external-abort-on-interrupt-in-exit-path.patch
