--- a/series.conf
+++ b/series.conf
@@ -56408,6 +56408,7 @@
 	patches.suse/libceph-clear-con-out_msg-on-policy-stateful_server-faults.patch
 	patches.suse/i2c-imx-Fix-external-abort-on-interrupt-in-exit-path.patch
 	patches.suse/9P-Cast-to-loff_t-before-multiplying.patch
+	patches.suse/NFSD-Add-missing-NFSv2-.pc_func-methods.patch
 	patches.suse/svcrdma-fix-bounce-buffers-for-unaligned-offsets-and.patch
 	patches.suse/SUNRPC-fix-copying-of-multiple-pages-in-gss_read_pro.patch
 	patches.suse/ext4-fix-leaking-sysfs-kobject-after-failed-mount.patch
