SUNRPC: The RDMA back channel mustn't disappear while requests are outstanding (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -52230,6 +52230,7 @@
 	patches.suse/nvme-multipath-fix-possible-io-hang-after-ctrl-recon.patch
 	patches.suse/nvme-multipath-remove-unused-groups_only-mode-in-ana.patch
 	patches.suse/SUNRPC-The-TCP-back-channel-mustn-t-disappear-while-.patch
+	patches.suse/SUNRPC-The-RDMA-back-channel-mustn-t-disappear-while.patch
 	patches.suse/NFSv4-Don-t-allow-a-cached-open-with-a-revoked-deleg.patch
 	patches.suse/NFS-Fix-an-RCU-lock-leak-in-nfs4_refresh_delegation_.patch
 	patches.suse/net-mlx5-prevent-memory-leak-in-mlx5_fpga_conn_creat.patch
