--- a/series.conf
+++ b/series.conf
@@ -56305,6 +56305,7 @@
 	patches.suse/Input-i8042-add-Entroware-Proteus-EL07R4-to-nomux-an.patch
 	patches.suse/Input-trackpoint-add-new-trackpoint-variant-IDs.patch
 	patches.suse/serial-8250_pci-Add-Realtek-816a-and-816b.patch
+	patches.suse/0001-fbcon-Fix-user-font-detection-test-at-fbcon_resize.patch
 	patches.suse/USB-UAS-fix-disconnect-by-unplugging-a-hub.patch
 	patches.suse/USB-quirks-Add-USB_QUIRK_IGNORE_REMOTE_WAKEUP-quirk-.patch
 	patches.suse/usblp-fix-race-between-disconnect-and-read.patch
