drm/gma500: Fix out-of-bounds access to struct drm_device.vblank[] (bsc#1129770)

--- a/series.conf
+++ b/series.conf
@@ -56800,6 +56800,7 @@
 	patches.suse/ACPI-GED-fix-Wformat.patch
 	patches.suse/bpf-Zero-fill-re-used-per-cpu-map-element.patch
 	patches.suse/igc-Fix-returning-wrong-statistics.patch
+	patches.suse/0003-drm-gma500-Fix-out-of-bounds-access-to-struct-drm_de.patch
 	patches.suse/mmc-sdhci-of-esdhc-Handle-pulse-width-detection-erra.patch
 	patches.suse/pinctrl-aspeed-Fix-GPI-only-function-problem.patch
 	patches.suse/pinctrl-amd-fix-incorrect-way-to-disable-debounce-fi.patch
