fbcon: Remove the superfluous break (bsc#1129770)
Backporting changes:

	* updated path drivers/video/fbcon/core to drivers/video/console
	* context changes

--- a/series.conf
+++ b/series.conf
@@ -56542,6 +56542,7 @@
 	patches.suse/video-fbdev-vga16fb-fix-setting-of-pixclock-because-.patch
 	patches.suse/video-fbdev-sis-fix-null-ptr-dereference.patch
 	patches.suse/Fix-use-after-free-in-get_capset_info-callback.patch
+	patches.suse/0004-fbcon-Remove-the-superfluous-break.patch
 	patches.suse/drm-msm-Drop-debug-print-in-_dpu_crtc_setup_lm_bound.patch
 	patches.suse/drm-i915-Break-up-error-capture-compression-loops-wi.patch
 	patches.suse/drm-amd-display-HDMI-remote-sink-need-mode-validatio.patch
