--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1698,3 +1698,4 @@ cd796ed3345030aa1bb332fe5c793b3dddaf56e7 # low priority and breaks kabi badly
 1c709b766e73e54d64b1dde1b7cfbcf25bcb15b9 # purely cosmetic
 d03727b248d0dae6199569a8d7b629a681154633 # reverted by 65caafd0d214
 65caafd0d2145d1dd02072c4ced540624daeab40 # revert of above
+a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
