--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1699,3 +1699,4 @@ cd796ed3345030aa1bb332fe5c793b3dddaf56e7 # low priority and breaks kabi badly
 d03727b248d0dae6199569a8d7b629a681154633 # reverted by 65caafd0d214
 65caafd0d2145d1dd02072c4ced540624daeab40 # revert of above
 a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
+991b78fbd2231175293bd1d7c0768fb4e4382e14 # not needed in our build environment
