--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1700,3 +1700,4 @@ d03727b248d0dae6199569a8d7b629a681154633 # reverted by 65caafd0d214
 65caafd0d2145d1dd02072c4ced540624daeab40 # revert of above
 a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
 991b78fbd2231175293bd1d7c0768fb4e4382e14 # not needed in our build environment
+548b8b5168c90c42e88f70fcf041b4ce0b8e7aa8 # not needed in our build environment
