--- a/series.conf
+++ b/series.conf
@@ -56610,6 +56610,7 @@
 	patches.suse/ibmvnic-restore-adapter-state-on-failed-reset.patch
 	patches.suse/ibmvnic-delay-next-reset-if-hard-reset-fails.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
+	patches.suse/msft-hv-2173-scsi-storvsc-Fix-error-return-in-storvsc_probe.patch
 	patches.suse/powerpc-64s-Fix-hash-ISA-v3.0-TLBIEL-instruction-gen.patch
 	patches.suse/powerpc-64s-pseries-Fix-hash-tlbiel_all_isa300-for-g.patch
 	patches.suse/i2c-qup-Fix-error-return-code-in-qup_i2c_bam_schedul.patch
