blacklist.conf: update blacklist

--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1701,3 +1701,4 @@ d03727b248d0dae6199569a8d7b629a681154633 # reverted by 65caafd0d214
 a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
 991b78fbd2231175293bd1d7c0768fb4e4382e14 # not needed in our build environment
 548b8b5168c90c42e88f70fcf041b4ce0b8e7aa8 # not needed in our build environment
+48620e341659f6e4b978ec229f6944dabe6df709 # net: dsa: mv88e6xxx: already applied
