kABI workaround for dsa/b53 changes (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57565,6 +57565,7 @@
 	patches.kabi/kABI-fix-for-g2d.patch
 	patches.kabi/ipvlan_addr_lock_kabi.patch
 	patches.kabi/kABI-genirq-add-back-irq_create_mapping.patch
+	patches.kabi/b53_kabi.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
