--- a/series.conf
+++ b/series.conf
@@ -56645,6 +56645,7 @@
 	patches.suse/tty-Fix-session-locking.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
+	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
