HID: Add another Primax PIXART OEM mouse quirk (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -50451,6 +50451,7 @@
 	patches.suse/livepatch-use-static-buffer-for-debugging-messages-under-rq-lock.patch
 	patches.suse/revert-livepatch-remove-reliable-stacktrace-check-in-klp_try_switch_task.patch
 	patches.suse/livepatch-remove-duplicate-warning-about-missing-reliable-stacktrace-support.patch
+	patches.suse/HID-Add-another-Primax-PIXART-OEM-mouse-quirk.patch
 	patches.suse/HID-wacom-generic-only-switch-the-mode-on-devices-wi.patch
 	patches.suse/HID-wacom-generic-Correct-pad-syncing.patch
 	patches.suse/HID-wacom-correct-touch-resolution-x-y-typo.patch
