--- a/series.conf
+++ b/series.conf
@@ -56072,6 +56072,7 @@
 	patches.suse/iommu-amd-restore-irte-remapen-bit-for-amd_iommu_activate_guest_mode
 	patches.suse/powerpc-book3s64-radix-Fix-boot-failure-with-large-a.patch
 	patches.suse/powerpc-dma-Fix-dma_map_ops-get_required_mask.patch
+	patches.suse/Input-i8042-add-Entroware-Proteus-EL07R4-to-nomux-an.patch
 	patches.suse/Input-trackpoint-add-new-trackpoint-variant-IDs.patch
 	patches.suse/USB-UAS-fix-disconnect-by-unplugging-a-hub.patch
 	patches.suse/USB-quirks-Add-USB_QUIRK_IGNORE_REMOTE_WAKEUP-quirk-.patch
