--- a/series.conf
+++ b/series.conf
@@ -56643,6 +56643,7 @@
 	patches.suse/tty-Fix-session-locking.patch
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
+	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
