--- a/series.conf
+++ b/series.conf
@@ -55029,6 +55029,7 @@
 	patches.suse/vmxnet3-update-to-version-4.patch
 	patches.suse/vmxnet3-use-correct-hdr-reference-when-packet-is-enc.patch
 	patches.suse/e1000e-Relax-condition-to-trigger-reset-for-ME-worka.patch
+	patches.suse/ath10k-Remove-msdu-from-idr-when-management-pkt-send.patch
 	patches.suse/wcn36xx-Fix-error-handling-path-in-wcn36xx_probe.patch
 	patches.suse/b43-Fix-connection-problem-with-WPA3.patch
 	patches.suse/b43_legacy-Fix-connection-problem-with-WPA3.patch
