kABI: ath10k: move a new structure member to the end (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -57575,6 +57575,7 @@
 	patches.kabi/ipvlan_addr_lock_kabi.patch
 	patches.kabi/kABI-genirq-add-back-irq_create_mapping.patch
 	patches.kabi/b53_kabi.patch
+	patches.kabi/kABI-ath10k-move-a-new-structure-member-to-the-end.patch
 
 	########################################################
 	# You'd better have a good reason for adding a patch
