--- a/series.conf
+++ b/series.conf
@@ -26129,6 +26129,7 @@
 	patches.suse/macvlan-do-not-assume-mac_header-is-set-in-macvlan_b.patch
 	patches.suse/HID-hidraw-Fix-returning-EPOLLOUT-from-hidraw_poll.patch
 	patches.suse/HID-uhid-Fix-returning-EPOLLOUT-from-uhid_char_poll.patch
+	patches.suse/HID-Fix-slab-out-of-bounds-read-in-hid_field_extract.patch
 	patches.suse/HID-hid-input-clear-unmapped-usages.patch
 	patches.suse/0001-Input-add-safety-guards-to-input_set_keycode.patch
 	patches.suse/RDMA-bnxt_re-Avoid-freeing-MR-resources-if-dereg-fai.patch
