--- a/series.conf
+++ b/series.conf
@@ -56143,6 +56143,7 @@
 	patches.suse/i2c-meson-fix-clock-setting-overwrite.patch
 	patches.suse/edac-i5100-fix-error-handling-order-in-i5100_init_one.patch
 	patches.suse/x86-fpu-allow-multiple-bits-in-clearcpuid-parameter.patch
+	patches.suse/x86-resctrl-remove-unused-struct-mbm_state-chunks_bw.patch
 	patches.suse/efivarfs-Replace-invalid-slashes-with-exclamation-ma.patch
 	patches.suse/0001-perf-core-Fix-race-in-the-perf_mmap_close-function.patch
 	patches.suse/crypto-algif_skcipher-EBUSY-on-aio-should-be-an-erro.patch
