x86/resctrl: Fix incorrect local bandwidth when mba_sc is enabled (bsc#1112178).

--- a/series.conf
+++ b/series.conf
@@ -56645,6 +56645,7 @@
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/x86-mm-mem_encrypt-fix-definition-of-pmd_flags_dec_wp.patch
+	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
