--- a/series.conf
+++ b/series.conf
@@ -16515,6 +16515,7 @@
 	patches.suse/mac80211-mesh-fix-mesh_pathtbl_init-error-path.patch
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/Revert-geneve-pull-IP-header-before-ECN-decapsulatio.patch
+	patches.suse/seqlock-avoid-Wshadow-warnings.patch
 	patches.suse/ibmvnic-add-some-debugs.patch
 
 	# powerpc/linux next
