Documentation: seqlock: s/LOCKTYPE/LOCKNAME/g (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16516,6 +16516,7 @@
 	patches.suse/can-softing-softing_netdev_open-fix-error-handling.patch
 	patches.suse/Revert-geneve-pull-IP-header-before-ECN-decapsulatio.patch
 	patches.suse/seqlock-avoid-Wshadow-warnings.patch
+	patches.suse/Documentation-seqlock-s-LOCKTYPE-LOCKNAME-g.patch
 	patches.suse/ibmvnic-add-some-debugs.patch
 
 	# powerpc/linux next
