iio: hrtimer-trigger: Mark hrtimer to expire in hard interrupt context (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -16518,6 +16518,7 @@
 	patches.suse/seqlock-avoid-Wshadow-warnings.patch
 	patches.suse/Documentation-seqlock-s-LOCKTYPE-LOCKNAME-g.patch
 	patches.suse/ibmvnic-add-some-debugs.patch
+	patches.suse/iio-hrtimer-trigger-Mark-hrtimer-to-expire-in-hard-i.patch
 
 	# powerpc/linux next
 	patches.suse/powerpc-perf-Fix-crash-with-is_sier_available-when-p.patch
