--- a/blacklist.conf
+++ b/blacklist.conf
@@ -1704,3 +1704,4 @@ a8dd86bf746256fbf68f82bc13356244c5ad8efa # for kernel development
 48620e341659f6e4b978ec229f6944dabe6df709 # net: dsa: mv88e6xxx: already applied
 8d2e77b39b8fecb794e19cd006a12f90b14dd077 # already covered by 46a41b512f6800b531e94bdf5f1ca0e226492d91
 58322a1590fc189a8e1e349d309637d4a4942840 # plainly misattributed, driver not even in this kernel version
+bcee5278958802b40ee8b26679155a6d9231783e # requires prerequisities, not worth it
