--- a/series.conf
+++ b/series.conf
@@ -26350,6 +26350,7 @@
 	patches.suse/nfs-Fix-getxattr-kernel-panic-and-memory-overflow.patch
 	patches.suse/ext4-fix-potential-negative-array-index-in-do_split.patch
 	patches.suse/romfs-fix-uninitialized-memory-leak-in-romfs_dev_rea.patch
+	patches.suse/epoll-Keep-a-reference-on-files-added-to-the-check-list.patch
 	patches.suse/XEN-uses-irqdesc-irq_data_common-handler_data-to-sto.patch
 	patches.suse/HID-core-Sanitize-event-code-and-type-when-mapping-i.patch
 	patches.suse/block-allow-for_each_bvec-to-support-zero-len-bvec.patch
