fix regression in "epoll: Keep a reference on files added to the check list"  (bsc#1180031, git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -26353,6 +26353,7 @@
 	patches.suse/epoll-Keep-a-reference-on-files-added-to-the-check-list.patch
 	patches.suse/do_epoll_ctl-clean-the-failure-exits-up-a-bit.patch
 	patches.suse/XEN-uses-irqdesc-irq_data_common-handler_data-to-sto.patch
+	patches.suse/fix-regression-in-epoll-Keep-a-reference-on-files-added-to-the-check-list.patch
 	patches.suse/HID-core-Sanitize-event-code-and-type-when-mapping-i.patch
 	patches.suse/block-allow-for_each_bvec-to-support-zero-len-bvec.patch
 	patches.suse/0001-mm-hugetlb-fix-a-race-between-hugetlb-sysctl-handler.patch
