--- a/series.conf
+++ b/series.conf
@@ -56667,6 +56667,7 @@
 	patches.suse/soc-qcom-smp2p-Safely-acquire-spinlock-without-IRQs.patch
 	patches.suse/soc-ti-knav_qmss-fix-reference-leak-in-knav_queue_pr.patch
 	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
+	patches.suse/drivers-soc-ti-knav_qmss_queue-Fix-error-return-code.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
