--- a/series.conf
+++ b/series.conf
@@ -56661,6 +56661,7 @@
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
+	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
