soc: qcom: smp2p: Safely acquire spinlock without IRQs (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56664,6 +56664,7 @@
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
 	patches.suse/soc-mediatek-Check-if-power-domains-can-be-powered-o.patch
+	patches.suse/soc-qcom-smp2p-Safely-acquire-spinlock-without-IRQs.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
