--- a/series.conf
+++ b/series.conf
@@ -56633,6 +56633,7 @@
 	patches.suse/ibmvnic-restore-adapter-state-on-failed-reset.patch
 	patches.suse/ibmvnic-delay-next-reset-if-hard-reset-fails.patch
 	patches.suse/net-x25-prevent-a-couple-of-overflows.patch
+	patches.suse/drm-rockchip-Avoid-uninitialized-use-of-endpoint-id-.patch
 	patches.suse/msft-hv-2173-scsi-storvsc-Fix-error-return-in-storvsc_probe.patch
 	patches.suse/powerpc-64s-Fix-hash-ISA-v3.0-TLBIEL-instruction-gen.patch
 	patches.suse/powerpc-64s-pseries-Fix-hash-tlbiel_all_isa300-for-g.patch
