soc: ti: knav_qmss: fix reference leak in knav_queue_probe (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56665,6 +56665,7 @@
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
 	patches.suse/soc-mediatek-Check-if-power-domains-can-be-powered-o.patch
 	patches.suse/soc-qcom-smp2p-Safely-acquire-spinlock-without-IRQs.patch
+	patches.suse/soc-ti-knav_qmss-fix-reference-leak-in-knav_queue_pr.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
