soc: mediatek: Check if power domains can be powered on at boot time (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56663,6 +56663,7 @@
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
+	patches.suse/soc-mediatek-Check-if-power-domains-can-be-powered-o.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
