--- a/series.conf
+++ b/series.conf
@@ -56662,6 +56662,7 @@
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
+	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
