--- a/series.conf
+++ b/series.conf
@@ -56666,6 +56666,7 @@
 	patches.suse/soc-mediatek-Check-if-power-domains-can-be-powered-o.patch
 	patches.suse/soc-qcom-smp2p-Safely-acquire-spinlock-without-IRQs.patch
 	patches.suse/soc-ti-knav_qmss-fix-reference-leak-in-knav_queue_pr.patch
+	patches.suse/soc-ti-Fix-reference-imbalance-in-knav_dma_probe.patch
 
 	# davem/net-next
 	patches.suse/ibmvnic-add-some-debugs.patch
