--- a/series.conf
+++ b/series.conf
@@ -56665,6 +56665,7 @@
 	patches.suse/ALSA-hda-ca0132-Change-Input-Source-enum-strings.patch
 	patches.suse/ASoC-jz4740-i2s-add-missed-checks-for-clk_get.patch
 	patches.suse/ASoC-wm_adsp-remove-ctl-from-list-on-error-in-wm_ads.patch
+	patches.suse/ASoC-pcm-DRAIN-support-reactivation.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
