--- a/series.conf
+++ b/series.conf
@@ -56663,6 +56663,7 @@
 	patches.suse/ALSA-hda-Fix-regressions-on-clear-and-reconfig-sysfs.patch
 	patches.suse/ALSA-hda-ca0132-Fix-AE-5-rear-headphone-pincfg.patch
 	patches.suse/ALSA-hda-ca0132-Change-Input-Source-enum-strings.patch
+	patches.suse/ASoC-jz4740-i2s-add-missed-checks-for-clk_get.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
