--- a/series.conf
+++ b/series.conf
@@ -56668,6 +56668,7 @@
 	patches.suse/ASoC-pcm-DRAIN-support-reactivation.patch
 	patches.suse/ASoC-wm8998-Fix-PM-disable-depth-imbalance-on-error.patch
 	patches.suse/ASoC-arizona-Fix-a-wrong-free-in-wm8997_probe.patch
+	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
 	patches.suse/soc-tegra-fuse-Fix-index-bug-in-get_process_id.patch
