--- a/series.conf
+++ b/series.conf
@@ -56663,6 +56663,7 @@
 	patches.suse/ath6kl-fix-enum-conversion-warning.patch
 	patches.suse/ath10k-Fix-an-error-handling-path.patch
 	patches.suse/ath10k-Release-some-resources-in-an-error-handling-p.patch
+	patches.suse/Bluetooth-Fix-null-pointer-dereference-in-hci_event_.patch
 	patches.suse/ALSA-hda-Fix-regressions-on-clear-and-reconfig-sysfs.patch
 	patches.suse/ALSA-hda-ca0132-Fix-AE-5-rear-headphone-pincfg.patch
 	patches.suse/ALSA-hda-ca0132-Change-Input-Source-enum-strings.patch
