ath10k: Fix an error handling path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56661,6 +56661,7 @@
 	patches.suse/x86-resctrl-fix-incorrect-local-bandwidth-when-mba_sc-is-enabled.patch
 	patches.suse/crypto-qat-fix-status-check-in-qat_hal_put_rel_rd_xf.patch
 	patches.suse/ath6kl-fix-enum-conversion-warning.patch
+	patches.suse/ath10k-Fix-an-error-handling-path.patch
 	patches.suse/ALSA-hda-Fix-regressions-on-clear-and-reconfig-sysfs.patch
 	patches.suse/ALSA-hda-ca0132-Fix-AE-5-rear-headphone-pincfg.patch
 	patches.suse/ALSA-hda-ca0132-Change-Input-Source-enum-strings.patch
