cpufreq: st: Add missing MODULE_DEVICE_TABLE (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56684,6 +56684,7 @@
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
+	patches.suse/cpufreq-st-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/Revert-ACPI-resources-Use-AE_CTRL_TERMINATE-to-termi.patch
 	patches.suse/mfd-rt5033-Fix-errorneous-defines.patch
 	patches.suse/pinctrl-falcon-add-missing-put_device-call-in-pinctr.patch
