Input: ads7846 - fix unaligned access on 7845 (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56688,6 +56688,7 @@
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
+	patches.suse/Input-ads7846-fix-unaligned-access-on-7845.patch
 	patches.suse/cpufreq-highbank-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/cpufreq-st-Add-missing-MODULE_DEVICE_TABLE.patch
 	patches.suse/cpufreq-loongson1-Add-missing-MODULE_ALIAS.patch
