staging: olpc_dcon: add a missing dependency (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -43344,6 +43344,7 @@
 	patches.suse/staging-rtl8188eu-add-missing-spaces-around-operator.patch
 	patches.suse/0205-staging-rtl8188eu-fix-lines-over-80-characters.patch
 	patches.suse/staging-rtl8188eu-simplify-function-comments.patch
+	patches.suse/staging-olpc_dcon-add-a-missing-dependency.patch
 	patches.suse/staging-rtl8188eu-remove-5-GHz-code-from-Hal_GetChnl.patch
 	patches.suse/staging-rtl8188eu-change-return-type-of-Hal_GetChnlG.patch
 	patches.suse/staging-rtl8188eu-rename-parameter-of-Hal_GetChnlGro.patch
