staging: olpc_dcon: Do not call platform_device_unregister() in dcon_probe() (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56689,6 +56689,7 @@
 	patches.suse/iio-pressure-mpl3115-Force-alignment-of-buffer.patch
 	patches.suse/iio-adc-rockchip_saradc-fix-missing-clk_disable_unpr.patch
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
+	patches.suse/staging-olpc_dcon-Do-not-call-platform_device_unregi.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/Input-ads7846-fix-race-that-causes-missing-releases.patch
 	patches.suse/Input-ads7846-fix-integer-overflow-on-Rt-calculation.patch
