spi: spi-ti-qspi: fix reference leak in ti_qspi_setup (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56695,6 +56695,7 @@
 	patches.suse/spi-img-spfi-fix-reference-leak-in-img_spfi_resume.patch
 	patches.suse/spi-spi-mem-Fix-passing-zero-to-PTR_ERR-warning.patch
 	patches.suse/spi-spi-mem-fix-reference-leak-in-spi_mem_access_sta.patch
+	patches.suse/spi-spi-ti-qspi-fix-reference-leak-in-ti_qspi_setup.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
