spi: img-spfi: fix reference leak in img_spfi_resume (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56692,6 +56692,7 @@
 	patches.suse/staging-comedi-mf6x4-Fix-AI-end-of-conversion-detect.patch
 	patches.suse/staging-olpc_dcon-Do-not-call-platform_device_unregi.patch
 	patches.suse/regmap-Remove-duplicate-type-field-from-regmap-regca.patch
+	patches.suse/spi-img-spfi-fix-reference-leak-in-img_spfi_resume.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
