spi: pic32: Don't leak DMA channels in probe error path (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56702,6 +56702,7 @@
 	patches.suse/spi-tegra20-sflash-fix-reference-leak-in-tegra_sflas.patch
 	patches.suse/spi-tegra114-fix-reference-leak-in-tegra-spi-ops.patch
 	patches.suse/spi-bcm63xx-hsspi-fix-missing-clk_disable_unprepare-.patch
+	patches.suse/spi-pic32-Don-t-leak-DMA-channels-in-probe-error-pat.patch
 	patches.suse/memstick-fix-a-double-free-bug-in-memstick_check.patch
 	patches.suse/memstick-r592-Fix-error-return-in-r592_probe.patch
 	patches.suse/Revert-platform-x86-wmi-Destroy-on-cleanup-rather-th.patch
