USB: serial: keyspan_pda: fix write deadlock (git-fixes).

--- a/series.conf
+++ b/series.conf
@@ -56687,6 +56687,7 @@
 	patches.suse/usb-ehci-omap-Fix-PM-disable-depth-umbalance-in-ehci.patch
 	patches.suse/usb-oxu210hp-hcd-Fix-memory-leak-in-oxu_create.patch
 	patches.suse/USB-serial-keyspan_pda-fix-dropped-unthrottle-interr.patch
+	patches.suse/USB-serial-keyspan_pda-fix-write-deadlock.patch
 	patches.suse/serial-8250_omap-Avoid-FIFO-corruption-caused-by-MDR.patch
 	patches.suse/bus-fsl-mc-fix-error-return-code-in-fsl_mc_object_al.patch
 	patches.suse/extcon-max77693-Fix-modalias-string.patch
